apps/tauri/lorvex-cli/src/render/snapshots/lorvex__render__snapshots__tasks__render_dependency_graph_snapshot_text_empty.snap
---
source: lorvex-cli/src/render/snapshots/tasks.rs
expression: out
---
Lorvex Dependency Graph
DB: /tmp/lorvex.db
Nodes: 0 / limit 50
Edges: 0 / limit 50
Graph:
  ↳ No dependency edges yet — add one with `lorvex task depend <blocker-id> --blocks <task-id>`.
Roots: 
Blocked: 
Leaf blockers:
