apps/tauri/lorvex-cli/src/render/snapshots/lorvex__render__snapshots__tasks__render_task_action_result_json@json.snap
---
source: lorvex-cli/src/render/snapshots.rs
expression: out
---
{
  "action": "task.complete",
  "db_path": "/tmp/lorvex.db",
  "task_id": "task-alpha",
  "title": "Ship feature"
}
