apps/tauri/lorvex-cli/src/render/snapshots/lorvex__render__snapshots__tasks__render_task_collection_json_empty@json.snap
---
source: lorvex-cli/src/render/snapshots.rs
expression: out
---
{
  "action": "query.tasks.collection",
  "db_path": "/tmp/lorvex.db",
  "label": "Today",
  "tasks": []
}
