apps/tauri/lorvex-cli/src/render/snapshots/lorvex__render__snapshots__tasks__render_task_collection_text_multiple.snap
---
source: lorvex-cli/src/render.rs
expression: out
---
Lorvex Today
DB: /tmp/lorvex.db
  - task-alpha: Ship feature (2026-04-10)
  - task-bravo: Review PR (2026-04-11)
  - task-charlie: Plain task
