apps/tauri/lorvex-cli/src/render/snapshots/lorvex__render__snapshots__tasks__render_task_detail_full.snap
---
source: lorvex-cli/src/render.rs
expression: out
---
Lorvex Task
DB: /tmp/lorvex.db
ID: task-alpha
Title: Ship feature
Status: open
Due: 2026-04-10
Planned: 2026-04-09
Priority: 1
List: Work (list-work)
Notes: Investigate the sync race
