apps/tauri/lorvex-cli/src/render/snapshots/lorvex__render__snapshots__tasks__render_task_detail_minimal.snap
---
source: lorvex-cli/src/render.rs
expression: out
---
Lorvex Task
DB: /tmp/lorvex.db
ID: task-bravo
Title: Minimal task
Status: open
Due: none
Planned: none
Priority: none
List: list-work
Notes: none
