apps/tauri/lorvex-cli/src/render/snapshots/lorvex__render__snapshots__tasks__render_task_section_empty.snap
---
source: lorvex-cli/src/render/snapshots/tasks.rs
expression: out
---

Focus tasks:
  ↳ No focus tasks set — `lorvex focus set <task-id>` or let your assistant call `focus_set` to pin one.
